[package]
name = "filerep"
version = "0.1.0"
authors = ["Jakub <jakub@polystream.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.15"
clap = "2.33.3"
futures = "0.3"
tokio = { version = "1.2.0",  features = ["rt", "rt-multi-thread", "macros", "fs", "time", "sync", "net", "io-util"] }
tokio-util = { version = "0.6.3",  features = ["codec"] }
bytes = "1.0.1"